--- a/wwwsrc/public/index.html
+++ b/wwwsrc/public/index.html
@@ -4,9 +4,13 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <script
+      src="https://kit.fontawesome.com/68f8809237.js"
+      crossorigin="anonymous"
+    ></script>
     <link
       rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+      href="path/to/font-awesome/css/font-awesome.min.css"
     />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <title>Keepr</title>
